Adding new stuff

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
     <!-- favicon -->
-    <link href="favicon.png" rel=icon>
+    <link href="favicon.ico" rel=icon>
 
     <!-- web-fonts -->
     <link href="https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet">
@@ -43,9 +43,6 @@
 <div class="left-col-block blocks">
     <header class="header">
         <div class="content text-center">
-            <h1>Mario Recio</h1>
-
-            <p class="lead">Batería</p>
             <ul class="social-icon">
                 <!--  <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>  -->
                 <li><a href="https://twitter.com/reciomario"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -74,7 +71,7 @@
             </div>
             <div class="col-md-12">
             <p>
-            	<b>Mario Recio - Gijón, Asturias (1986) </b>
+            	<b>Gijón, Asturias (1986) </b>
             </p>
 			<p>
             	Soy el actual batería del grupo <b>Last Titans</b>. Empecé a tocar la batería a los 15 años, allá por el 2001, de forma autodidacta.
@@ -92,7 +89,7 @@
 				Actualmente tengo un set <b>Ludwig Super Classic</b> totalmente customizada y restaurada con acabado Black Oyster Pearl.
 			</p>
             </div>
-            <center> <img width="85%" align=center src="img/caja.png" alt=""></center>
+            <center> <img width="100%" align=center src="img/caja2.jpg" alt=""></center>
         </div>
     </div>
 </section>
@@ -146,6 +143,7 @@
         <!-- .row -->
     </div>
     <!--.container-fluid-->
+    <img width="100%" align=center src="img/me/detalle.jpg" alt="">
 </section>
 
 
@@ -161,6 +159,29 @@
         <div class="row">
             <div class="col-md-12">
              <table style="width:100%" id="albums" cellspacing="0">
+               <tr>
+                <td>
+                    <img src="img/cd/LTPunk.jpg" id="responsive-CDimage">
+                </td>
+                <td>
+                    <div class="content-item">
+                        <small>2017</small>
+                        <h3>Last Titans</h3>
+                        <h4>Punk Is</h4>
+                        <p> <a href="https://lasttitans.bandcamp.com/album/rise-of-the-last-titans" target="_blank">
+                            <i class="fa fa-music" aria-hidden="true"></i></a>
+                            <a href="https://play.spotify.com/album/64FVhwZ57QbF36lb1NxJim" target="_blank">
+                            <i class="fa fa-spotify" aria-hidden="true"></i></a>
+                            <a href="https://www.amazon.es/Rise-Last-Titans/dp/B01MS4X9SN/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1490167563&sr=1-1-mp3-albums-bar-strip-0&keywords=last+titans" target="_blank">
+                            <i class="fa fa-amazon" aria-hidden="true"></i></a>
+                            <a href="https://itunes.apple.com/es/artist/last-titans/id1192245678" target="_blank">
+                            <i class="fa fa-apple" aria-hidden="true"></i></a>
+                            <a href="https://play.google.com/store/music/album/Last_Titans_Rise_Of_The_Last_Titans?id=B2myjn6v5sgmphr5s2ljwghaxmq&hl=es" target="_blank">
+                            <i class="fa fa-google" aria-hidden="true"></i></a>
+                        </p>
+                    </div>
+                </td>
+              </tr>
              <tr>
 			    <td>
 			    	<img src="img/cd/LTRise.jpg" id="responsive-CDimage">
@@ -331,6 +352,7 @@
             </div>
         </div>
         <!--.row-->
+        <img width="100%" align=center src="img/me/grabando2.jpg" alt="">
     </div>
     <!-- .container-fluid -->
 
@@ -346,6 +368,25 @@
         </div>
         <!--.row-->
         <table style="width:100%" id="albums" cellspacing="0">
+            <tr>
+                <td>
+                    <img src="img/cd/bonsaisHinoki.jpg" id="responsive-CDimage">
+                </td>
+                <td>
+                    <div class="content-item">
+                        <small>2017</small>
+                        <h3>Los Bonsáis</h3>
+                        <h4>Hinoki</h4>
+                        <p> <a href="https://open.spotify.com/album/1OLSeDenaNNnobXV0qAWUN?si=eYJAeXKIQCCsrNQ4OU07fA" target="_blank">
+                            <i class="fa fa-spotify" aria-hidden="true"></i></a>
+                            <a href="https://www.amazon.es/Hinoki-Los-Bons%C3%A1is/dp/B07NNVKXK8" target="_blank">
+                            <i class="fa fa-amazon" aria-hidden="true"></i></a>
+                            <a href="https://music.apple.com/es/album/hinoki/1447652901" target="_blank">
+                            <i class="fa fa-apple" aria-hidden="true"></i></a>
+                        </p>
+                    </div>
+                </td>
+              </tr>
             <tr>
                 <td>
                     <img src="img/cd/monaSalon.jpg" id="responsive-CDimage">
@@ -466,6 +507,20 @@
         </div>
         <div class="row">
             <div class="col-md-12">
+                <a class="portfolio-item" href="https://www.youtube.com/watch?v=PkcDpkxw7gg" target="_blank">
+                    <div class="portfolio-thumb">
+                        <img src="img/videos/morningAnthem.png" alt="" height="120px">
+                    </div>
+
+                    <div class="portfolio-info">
+                        <h3>Last Titans</h3>
+                        <small>Morning Anthem</small>
+                    </div>
+                    <!-- portfolio-info -->
+                </a>
+                <!-- .portfolio-item -->
+        </div>
+        <div class="col-md-12">
                 <a class="portfolio-item" href="https://www.youtube.com/watch?v=PkcDpkxw7gg" target="_blank">
                     <div class="portfolio-thumb">
                         <img src="img/videos/lasttitansrev.png" alt="" height="120px">
