Adding new stuff

--- a/index.html
+++ b/index.html
@@ -352,12 +352,16 @@
             </div>
         </div>
         <!--.row-->
-        <img width="100%" align=center src="img/me/grabando2.jpg" alt="">
+        
     </div>
     <!-- .container-fluid -->
 
 </section>
 <!-- .section-experience -->
+
+<section class="section-wrapper section-education">
+    <img width="100%" align=center src="img/me/grabando5.jpg" alt="">
+</section>
 
 <section class="section-wrapper section-education">
     <div class="container-fluid">
