Adding new stuff

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="content-item">
                         <small>2017</small>
                         <h3>Last Titans</h3>
-                        <h4>Punk Is</h4>
+                        <h4>Punk Is Dead</h4>
                         <p> <a href="https://lasttitans.bandcamp.com/album/rise-of-the-last-titans" target="_blank">
                             <i class="fa fa-music" aria-hidden="true"></i></a>
                             <a href="https://play.spotify.com/album/64FVhwZ57QbF36lb1NxJim" target="_blank">
